# Vozel

./: CMakeLists.txt  main.cpp  readme.md
assets/shaders/postProcessing/: brightPass.frag
core/: CMakeLists.txt  assimpLoader.cpp  material.cpp  material.h  model.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
core/asset/: assimpLoader.cpp  assimpLoader.h  material.cpp  material.h  model.cpp  model.h  texture.cpp
core/objectSystems/: GameObject.h  component.cpp  component.h  gameObject.cpp  object.cpp  object.h
core/objectSystems/components/: Light.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
core/rendering/: frameBuffer.h  shader.h  texture.cpp  texture.h
core/rendering/postProcessing/: postProcessingEffectBase.cpp  postProcessingManager.cpp
core/rendering/postProcessing/effects/: bloomEffect.cpp  fogEffect.cpp  postProcessingEffects.h
docs/: fileWatcherClassDiagram.md  fileWatcherEventGraph.md
docs/fileWatcher/: EventParsing.md  MutexOperations.md  ProjectPanelFlow.md  README.md  Relations_HighLevel_ClassDiagram.md  ShutdownOfThreads.md  ThreadCommunication.md  fileWatcherClassDiagram.md  fileWatcherEventGraph.md
docs/fileWatcher/Optimizations/: AtomicShutdownPattern.md  EventCoalescing.md  EventFiltering.md  LockContention.md  LockContention_Effect.md  NonBlockingMain.md
editor/: CMakeLists.txt  editor.cpp  editor.h
editor/panels/: heirarchyPanel.cpp  hierarchyPanel.h  inspectorPanel.cpp  inspectorPanel.h  projectPanel.cpp  projectPanel.h
editor/system/: fileWatcher.cpp  fileWatcher.h
game/: CMakeLists.txt  game.cpp  game.h  inputManager.cpp  inputManager.h
